# amp-platform-reference

./: .gitignore  CMakeLists.txt  README.md  TASK_DESCRIPTION.md  TASK_INDEX.md  TASK_PHASE1_DIAGRAMS.md  TASK_PORTING_GUIDES.md  TASK_SUMMARY.md
docs/: AMP_CONTRACT.md  EXAMPLES.md  RP2350_PLATFORM.md
examples/: CMakeLists.txt
examples/hello-amp/: hello_amp.c
examples/pingpong/: pingpong.c
examples/shared-counter/: shared_counter.c
runtime/: CMakeLists.txt
runtime/include/: amp_barriers.h  amp_boot.h  amp_config.h  amp_mailbox.h  amp_ringbuf.h  amp_semaphore.h  amp_shmem.h
runtime/src/: amp_boot.c  amp_config.c  amp_mailbox.c  amp_ringbuf.c  amp_semaphore.c  amp_shmem.c
tools/: build.sh  flash.sh
